more work on how to page

--- a/howTo.html
+++ b/howTo.html
@@ -31,7 +31,7 @@
                     <li><a href="product.html" title="Products">Products</a></li>
                     <li><a href="download.php" title="Download" id="down1">Download</a></li>
                     <li><a href="forum" title="forum">Forum</a></li>
-                    <li class="last" id="outterHelp"><i id="btnHelp" title="Help" onclick="startHelper()"
+                    <li class="last" id="outterHelp"><i id="btnHelp" title="Help" data-help="home"
                                                         class="fa fa-question-circle"></i></li>
                 </ul>
             </div>
@@ -52,9 +52,8 @@
         </ul>
     </div>
     <!--Main Bannr End-->
+	
     <!--Inner Page Cantent-->
-
-
     <div class="pageCantent innerCantent">
         <div class="col-xl-2 col-lg-2 col-md-3 col-sm-3">
 
@@ -75,11 +74,11 @@
             </ul>
         </div>
         <div class="containerOld" id="faqContainer">
-            <div class="password101 cf">
-                <div id="howToWelcomeMessage" class="col-xl-10 col-lg-9 col-md-9 col-sm-9">
+            <div class="cf">
+                <div id="howToWelcomeMessage" class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                     Welcome to the how to page click the a link on the left
                 </div>
-                <div class="col-xl-10 col-lg-9 col-md-9 col-sm-9" id="howtoIframe">
+                <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" id="howtoIframe">
                     <iframe src='https://trssolutionsllc-my.sharepoint.com/personal/mike_trssolutionsllc_onmicrosoft_com/_layouts/15/guestaccess.aspx?docid=01fc55bbf0d9b4ca18a09289a1fd474d3&authkey=ASA50hNX_JMv1YefJY_S7cM&action=embedview&wdAr=1.7777777777777777&wdEaa=0'
                             width='962px' height='565px' frameborder='0'>This is an embedded <a target='_blank'
                                                                                                 href='https://office.com'>Microsoft
@@ -88,7 +87,7 @@
                     </iframe>
                 </div>
 
-                <div id="howtoList" class="col-xl-10 col-lg-9 col-md-9 col-sm-9">
+                <div id="howtoList" class="col-xl-12 col-lg-12 col-md-12 col-sm-12">
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <p class="setupInstruction" id="step1">1) Click Facebook Google LinkedIn Twitter Button To
                             Create An Account </p>
