--- a/howTo.html
+++ b/howTo.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" href="css/font-awesome-4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/boostrap.min.js"></script>
 </head>
 
 <body>
@@ -56,83 +56,163 @@
 
 
     <!--Inner Page Cantent-->
-    <div class="col-xl-2 col-lg-2 col-md-3 col-sm-3">
-        <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="447">
-            <li id="navHowToHome" class="active">
-                <a href="">Home</a>
-            </li>
-            <li id="navHowToList">
-                <a href="#" onclick="alterDisplay('howtoList');">
-                    How To's
-                </a>
-            </li>
-            <li id="navDocuments">
-                <a href="#" onclick="alterDisplay('howtoIframe');">
-                    Documents
-                </a>
-            </li>
-        </ul>
-    </div>
-    <div id="howToWelcomeMessage" class="col-xl-10 col-lg-10 col-md-9 col-sm-9 howToContent">
-        Welcome to the how to page click the a link on the left
-    </div>
-    <div class="col-xl-10 col-lg-10 col-md-9 col-sm-9 howToContent" id="howtoIframe">
-        <iframe src='https://trssolutionsllc-my.sharepoint.com/personal/mike_trssolutionsllc_onmicrosoft_com/_layouts/15/guestaccess.aspx?docid=01fc55bbf0d9b4ca18a09289a1fd474d3&authkey=ASA50hNX_JMv1YefJY_S7cM&action=embedview&wdAr=1.7777777777777777&wdEaa=0'
-                width='962px' height='565px' frameborder='0'>This is an embedded <a target='_blank'
-                                                                                    href='https://office.com'>Microsoft
-            Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office
-            Online</a>.
-        </iframe>
-    </div>
+    <div class="col-lg-12">
+        <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3 col-xs-3" id="sideNavOutterDiv">
+            <ul class="nav nav-pills nav-stacked" data-spy="affix" data-offset-top="447">
+                <li id="navHowToHome" class="active">
+                    <a href="#" onclick="alterDisplay('howToWelcomeMessage');">Home</a>
+                </li>
+                <li id="navHowToList">
+                    <a href="#" onclick="alterDisplay('howtoList');">
+                        How To's
+                    </a>
+                </li>
+                <li id="navDocuments">
+                    <a href="#" onclick="alterDisplay('howtoIframe');">
+                        Documents
+                    </a>
+                </li>
+                <li id="navFAQs">
+                    <a href="#" onclick="alterDisplay('howToFAQs')">
+                        FAQ's
+                    </a>
+                </li>
+                <li id="navVideos">
+                    <a href="#">
+                        Videos
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div id="howToWelcomeMessage" class="col-xl-10 col-lg-10 col-md-10 col-sm-9 col-xs-9 howToContent">
+            <div class="panel panel-primary col-lg-5 col-md-5 col-lg-12 col-xs-12 noPadding">
+                <div class="panel-heading">
+                    <a href="#" onclick="alterDisplay('howtoList');" style="color: white">
+                        How To's
+                    </a>
+                </div>
+                <div class="panel-body">
+                    A how-to is an informal, often short, description of how to accomplish a specific task. A how-to is
+                    usually meant to help non-experts, may leave out details that are only important to experts, and may
+                    also be greatly simplified from an overall discussion of the topic.
+                </div>
+            </div>
+            <div class="panel panel-primary col-lg-5 col-md-5 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1 noPadding">
+                <div class="panel-heading">
+                    <a href="#" onclick="alterDisplay('howtoIframe');" style="color: white">
+                        Documents
+                    </a>
+                </div>
+                <div class="panel-body">
+                    A how-to is an informal, often short, description of how to accomplish a specific task. A how-to is
+                    usually meant to help non-experts, may leave out details that are only important to experts, and may
+                    also be greatly simplified from an overall discussion of the topic.
+                </div>
+            </div>
+            <div class="panel panel-primary col-lg-5 col-md-5 col-sm-12 col-xs-12 noPadding">
+                <div class="panel-heading">FAQ's</div>
+                <div class="panel-body">
+                    A how-to is an informal, often short, description of how to accomplish a specific task. A how-to is
+                    usually meant to help non-experts, may leave out details that are only important to experts, and may
+                    also be greatly simplified from an overall discussion of the topic.
+                </div>
+            </div>
+            <div class="panel panel-primary col-lg-5 col-md-5 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1 noPadding">
+                <div class="panel-heading">Videos</div>
+                <div class="panel-body">
+                    A how-to is an informal, often short, description of how to accomplish a specific task. A how-to is
+                    usually meant to help non-experts, may leave out details that are only important to experts, and may
+                    also be greatly simplified from an overall discussion of the topic.
+                </div>
+            </div>
+        </div>
 
-    <div id="howtoList" class="col-xl-10 col-lg-10 col-md-9 col-sm-9 howToContent">
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <p class="setupInstruction" id="step1">1) Click Facebook Google LinkedIn Twitter Button To
-                Create An Account </p>
-            <img src="images/step1.jpg"/>
+        <div class="col-xl-10 col-lg-10 col-md-10 col-sm-9 col-xs-9 howToContent" id="howtoIframe">
+            <iframe src='https://trssolutionsllc-my.sharepoint.com/personal/mike_trssolutionsllc_onmicrosoft_com/_layouts/15/guestaccess.aspx?docid=01fc55bbf0d9b4ca18a09289a1fd474d3&authkey=ASA50hNX_JMv1YefJY_S7cM&action=embedview&wdAr=1.7777777777777777&wdEaa=0'
+                    width='962px' height='565px' frameborder='0'>This is an embedded <a target='_blank'
+                                                                                        href='https://office.com'>Microsoft
+                Office</a> presentation, powered by <a target='_blank' href='https://office.com/webapps'>Office
+                Online</a>.
+            </iframe>
         </div>
-        <hr class="hrOverride"/>
-        <div class="col-lg-12 col-md-12 col-sm-12">
-            <p class="setupInstruction" id="step2">2) Choose the Account That You Would Like To Register
-                With</p>
-            <img src="images/step2.jpg"/>
+
+        <div id="howtoList" class="col-xl-10 col-lg-10 col-md-9 col-sm-9 col-xs-9 howToContent">
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <p class="setupInstruction" id="step1">1) Click Facebook Google LinkedIn Twitter Button To
+                    Create An Account </p>
+                <img src="images/step1.jpg"/>
+            </div>
+            <hr class="hrOverride"/>
+            <div class="col-lg-12 col-md-12 col-sm-12">
+                <p class="setupInstruction" id="step2">2) Choose the Account That You Would Like To Register
+                    With</p>
+                <img src="images/step2.jpg"/>
+            </div>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction" id="step3">3) We Chose LinkedIN to Create Our Account</p>
+            <img src="images/step3.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">4) ....</p>
+            <img src="images/step4.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">5)....</p>
+            <img src="images/step5.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">6) ....</p>
+            <img src="images/step6.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">7) ....</p>
+            <img src="images/step7.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">8) ....</p>
+            <img src="images/step8.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">9) ....</p>
+            <img src="images/step9.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">10) ....</p>
+            <img src="images/step10.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">11)....</p>
+            <img src="images/step11.jpg"/>
+            <hr class="hrOverride"/>
+            <p class="setupInstruction">12) ....</p>
+            <img src="images/step12.jpg"/>
         </div>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction" id="step3">3) We Chose LinkedIN to Create Our Account</p>
-        <img src="images/step3.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">4) ....</p>
-        <img src="images/step4.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">5)....</p>
-        <img src="images/step5.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">6) ....</p>
-        <img src="images/step6.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">7) ....</p>
-        <img src="images/step7.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">8) ....</p>
-        <img src="images/step8.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">9) ....</p>
-        <img src="images/step9.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">10) ....</p>
-        <img src="images/step10.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">11)....</p>
-        <img src="images/step11.jpg"/>
-        <hr class="hrOverride"/>
-        <p class="setupInstruction">12) ....</p>
-        <img src="images/step12.jpg"/>
+
+        <div id="howToFAQs" class="faqs col-xl-10 col-lg-10 col-md-9 col-sm-9 col-xs-9 howToContent">
+            <h2></h2>
+            <ul>
+                <li>How is it that Gatekeeper doesn't need or keep my Password? Don’t you need it to work?</li>
+                <p>We authenticate you based on your device. You use your Master Password to only decrypt your
+                    own data locally on your computer, and your data is successfully decrypted only if you
+                    provided the right one.
+                </p>
+
+                <li>What if Gatekeepers password gets hacked?</li>
+                <p>We take every precaution to keep our servers secure through 24x7 building monitoring,
+                    biometric entryways and armed guards. Your data is always encrypted with AES-256, with a
+                    unique key for each user that isn't recorded anywhere. Without these keys, this encrypted
+                    data is useless to anyone, even us.</p>
+
+                <li>Is my data safe in the cloud?</li>
+                <p>Absolutely safe. Our cloud holds only encrypted data, which is useless without your unique
+                    Master Password-derived key (because of the AES-256 encryption algorithm.) And we don't have
+                    any record anywhere.</p>
+
+                <li>What if I forget my Master Password?</li>
+                <p>We never store your Password, your data is unrecoverable if you forget it – the good news is,
+                    now you only have one password to remember for all of your accounts so it should make it
+                    easier for you to remember! Our users like the fact that this is the only way for us to
+                    ensure that their data is inaccessible to anyone but them.</p>
+            </ul>
+        </div>
     </div>
     <!--Inner Page Cantent End-->
 
 
     <!--Footer-->
-    <div id="footer" class="col-lg-12">
+    <div id="footer" class="footer col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="containerOld">
             <div class="columns">
                 <div class="column">
