more work on howTo page

--- a/howTo.html
+++ b/howTo.html
@@ -78,7 +78,7 @@
                     </a>
                 </li>
                 <li id="navVideos">
-                    <a href="#">
+                    <a href="#" onclick="alterDisplay('howToVideos')">
                         Videos
                     </a>
                 </li>
@@ -110,7 +110,11 @@
                 </div>
             </div>
             <div class="panel panel-primary col-lg-5 col-md-5 col-sm-12 col-xs-12 noPadding">
-                <div class="panel-heading">FAQ's</div>
+                <div class="panel-heading">
+				 <a href="#" onclick="alterDisplay('howToFAQs')" style="color: white">
+                        FAQ's
+                   </a>
+				</div>
                 <div class="panel-body">
                     A how-to is an informal, often short, description of how to accomplish a specific task. A how-to is
                     usually meant to help non-experts, may leave out details that are only important to experts, and may
@@ -118,7 +122,11 @@
                 </div>
             </div>
             <div class="panel panel-primary col-lg-5 col-md-5 col-sm-12 col-xs-12 col-lg-offset-1 col-md-offset-1 noPadding">
-                <div class="panel-heading">Videos</div>
+                <div class="panel-heading">
+				<a href="#" onclick="alterDisplay('howToVideos')" style="color: white">
+                        Videos
+                    </a>
+				</div>
                 <div class="panel-body">
                     A how-to is an informal, often short, description of how to accomplish a specific task. A how-to is
                     usually meant to help non-experts, may leave out details that are only important to experts, and may
@@ -206,6 +214,18 @@
                     easier for you to remember! Our users like the fact that this is the only way for us to
                     ensure that their data is inaccessible to anyone but them.</p>
             </ul>
+        </div>
+		<div class="col-xl-10 col-lg-10 col-md-10 col-sm-9 col-xs-9 howToContent" id="howToVideos">
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
+				<p>videos coming soon....</p>
         </div>
     </div>
     <!--Inner Page Cantent End-->
