--- a/index.html
+++ b/index.html
@@ -151,5 +151,7 @@
 <script type="text/javascript" src="js/general.js"></script>
 <script type="text/javascript" src="js/utils.js"></script>
 <script type="text/javascript" src="js/viewportSize-min.js"></script>
+<script type="text/javascript" src="js/introjs/intro.js"></script>
+<script type="text/javascript" src="js/introjs/home.js"></script>
 </body>
 </html>
